lib_LTLIBRARIES = libhamlib-alinco.la
libhamlib_alinco_la_SOURCES = dx77.c alinco.c
libhamlib_alinco_la_LDFLAGS = -no-undefined -module -avoid-version
libhamlib_alinco_la_LIBADD = ../src/libhamlib.la

lib_LIBRARIES = libhamlib-alinco.a
libhamlib_alinco_a_SOURCES = dx77.c alinco.c
libhamlib_alinco_a_LIBADD = ../src/libhamlib.la

noinst_HEADERS = alinco.h
