
noinst_LTLIBRARIES = libhamlib-amsat.la
libhamlib_amsat_la_SOURCES = if100.c
libhamlib_amsat_la_CFLAGS = -DIN_HAMLIB $(AM_CFLAGS)
# libhamlib_amsat_la_LDFLAGS = -no-undefined -module -avoid-version
#hamlib_amsat_la_LIBADD = $(top_builddir)/lib/libmisc.la \
#				$(top_builddir)/src/libhamlib.la

EXTRA_DIST = Android.mk
